--- a/app/views/feelings/index.html.erb
+++ b/app/views/feelings/index.html.erb
@@ -1,13 +1,17 @@
 <div class="feelings_index">
   <!-- <div class="row">
     <div class="medium-12 medium-centered columns"> -->
-      <h2>Feelings Index</h2>
+      <h2>Unhappiness</h2>
+
+        <p>
+          The idea is that the best indicator of wealth and well-being is how happy you are.
+        </p>
     <!-- </div>
   </div> -->
 
   <!-- <div class="row">
     <div class="medium-12 medium-centered columns"> -->
-      <table>
+      <!-- <table>
         <tr>
           <th>Rating</th>
         </tr>
@@ -16,9 +20,9 @@
           <td><%= item.level %></td>
           </tr>
         <% end %>
-      </table>
+      </table> -->
     <!-- </div>
   </div> -->
   <br>
-  <%= link_to "See your levels", levels_path, class: "button radius tiny" %>
+  <!-- <%= link_to "See your levels", levels_path, class: "button radius tiny" %> -->
 </div>
