--- a/app/views/levels/new.html.erb
+++ b/app/views/levels/new.html.erb
@@ -1,5 +1,5 @@
 <div class="form_container">
-  <!-- <div class="medium-12 medium-centered columns"> -->
+  <div class="medium-4 medium-centered columns">
     <h4>New Level</h4>
       <%= form_for @level do |f| %>
 
@@ -23,5 +23,5 @@
       <%end%>
 
     <%= link_to "Back to Index", feelings_path, class: "button radius small"%>
-  <!-- </div> -->
+  </div>
 </div>
