--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -450,7 +450,7 @@ $alert-font-family: growl;
 
 // We use these to control button text styles.
 $button-font-family: growl;
-$button-font-color: white;
+$button-font-color: red;
 // $button-font-color-alt: $oil;
 // $button-font-tny: rem-calc(11);
 // $button-font-sml: rem-calc(13);
