--- a/app/views/feelings/show.html.erb
+++ b/app/views/feelings/show.html.erb
@@ -3,7 +3,7 @@
 
     <table>
       <h3>Unhappiness for <%= @feeling.category %></h3>
-      <tr>
+      <!-- <tr>
         <th>Level</th>
         <th>Created At</th>
       </tr>
@@ -12,8 +12,20 @@
         <td><%= level.amount %></td>
         <td><%= level.created_at %></td>
         </tr>
-      <% end %>
-    </table>
+        </table>
+      <% end %> -->
+      <div class="feelings_chart">
+        <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+        <!-- <%= javascript_include_tag "app/assets/javascripts/highcharts.js", "chartkick" %> -->
+        <%= javascript_include_tag "application", "chartkick" %>
+        <%= pie_chart @levels.group(:amount).count %>
+
+
+        <!-- <%= line_chart @levels.group_by_day(:created_at).count %> -->
+          <!-- <% content_for :level do %>
+          <%= javascript_include_tag 'application' %> -->
+          <!-- <% end %> -->
+      </div>
     <%= link_to "New Level", new_feeling_level_path(@feeling) %>
   </div>
 <!-- </div> -->
