start to add api

--- a/app/views/feelings/index.html.erb
+++ b/app/views/feelings/index.html.erb
@@ -7,9 +7,10 @@
             <div class="categories_result"><%= link_to feeling.category, feeling_path(feeling) %></div>
             <!-- <div class="categories_result"><%= link_to feeling.category, new_feeling_level_path(feeling) %></div> -->
           <% end %>
+          <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
+          <!-- <%= javascript_include_tag "app/assets/javascripts/highcharts.js", "chartkick" %> -->
+          <%= javascript_include_tag "application", "drawChart" %>
       </div>
     </div>
-
-
   <br>
 </div>
