--- a/app/views/feelings/show.html.erb
+++ b/app/views/feelings/show.html.erb
@@ -14,7 +14,7 @@
         </tr>
         </table>
       <% end %> -->
-      <div class="feelings_chart">
+      <div id="feelings_chart">
         <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
         <!-- <%= javascript_include_tag "app/assets/javascripts/highcharts.js", "chartkick" %> -->
         <%= javascript_include_tag "application", "chartkick" %>
