--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -124,8 +124,8 @@ $include-html-global-classes: $include-html-classes;
 // $info-color: #a0d3e8;
 
 // We use these to control various global styles
-$body-bg: black;
-$body-font-color: white;
+$body-bg: white;
+$body-font-color: black;
 // $body-font-family: $font-family-sans-serif;
 // $body-font-weight: $font-weight-normal;
 // $body-font-style: normal;
@@ -466,7 +466,7 @@ $button-font-color: red;
 // $button-border-width: 0;
 // $button-border-style: solid;
 /* $button-bg-color: #c25975; */
-$button-bg-color: #000000;
+$button-bg-color: white;
 // $button-bg-hover: scale-color($button-bg-color, $lightness: $button-function-factor);
 // $button-border-color: $button-bg-hover;
 // $secondary-button-bg-hover: scale-color($secondary-color, $lightness: $button-function-factor);
@@ -643,7 +643,7 @@ $button-bg-color: #000000;
 // $form-label-font-size: rem-calc(14);
 // $form-label-font-weight: $font-weight-normal;
 $form-label-font-family: growl;
-$form-label-font-color: white;
+$form-label-font-color: black;
 // $form-label-line-height: 1.5;
 // $form-label-font-color: scale-color($black, $lightness: 30%);
 // $form-label-small-transform: capitalize;
@@ -1405,7 +1405,7 @@ $form-label-font-color: white;
 
 // Background color for the top bar
 /* $topbar-bg-color: #635454; */
-$topbar-bg-color: #000000;
+$topbar-bg-color: black;
 // $topbar-bg: $topbar-bg-color;
 
 // Height and margin
