--- a/app/views/feelings/show.html.erb
+++ b/app/views/feelings/show.html.erb
@@ -2,7 +2,7 @@
   <div class="feelings_details">
 
     <table>
-      <h3>Unhappiness for <%= @feeling.category %></h3>
+      <h3>Unhappiness Levels for <%= @feeling.category %></h3>
       <!-- <tr>
         <th>Level</th>
         <th>Created At</th>
