--- a/app/views/levels/index.html.erb
+++ b/app/views/levels/index.html.erb
@@ -7,7 +7,7 @@
   <!-- <div class="row"> -->
     <!-- <div class="medium-12 medium-centered columns"> -->
       <table>
-        <h3>Unhappiness for <%= @feeling.category %></h3>
+        <h3>Unhappiness Levels for <%= @feeling.category %></h3>
         <tr>
           <th>Level</th>
         </tr>
