--- a/app/views/feelings/index.html.erb
+++ b/app/views/feelings/index.html.erb
@@ -9,9 +9,7 @@
           <% end %>
           <br>
           <h4>Submissions per Day</h4>
-          <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-          <!-- <%= javascript_include_tag "app/assets/javascripts/highcharts.js", "chartkick" %> -->
-          <%= javascript_include_tag "application", "drawChart" %>
+          <%= javascript_include_tag :application, :drawChart %>
           <%= bar_chart @all_levels.group_by_day(:created_at).count %>
 
       </div>
