--- a/app/views/feelings/show.html.erb
+++ b/app/views/feelings/show.html.erb
@@ -15,9 +15,7 @@
         </table>
       <% end %> -->
       <div id="feelings_chart">
-        <%= javascript_include_tag "//www.google.com/jsapi", "chartkick" %>
-        <!-- <%= javascript_include_tag "app/assets/javascripts/highcharts.js", "chartkick" %> -->
-        <%= javascript_include_tag "application", "chartkick" %>
+        <%= javascript_include_tag :application, :chartkick %>
         <%= pie_chart @levels.group(:amount).count %>
 
 
