--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,8 +36,7 @@
 
   <%= yield %>
 
-  <%= javascript_include_tag 'application' %>
-  <%= javascript_include_tag "http://www.google.com/jsapi", "chartkick" %>
-  <%= yield :extra_footer %>
+  <%= javascript_include_tag :application, :drawChart %>
+   <%= yield :extra_footer %>
 </body>
 </html>
