--- a/app/views/feelings/index.html.erb
+++ b/app/views/feelings/index.html.erb
@@ -1,5 +1,5 @@
 <div class="feelings_index">
-  <h4>Unhappiness Categories</h4>
+  <h4>Happiness Categories</h4>
 
     <div class="row">
       <div id="category_list" class="medium-12 medium-centered columns">
